--- a/.github/actions/load-test/action.yml
+++ b/.github/actions/load-test/action.yml
@@ -21,10 +21,10 @@ inputs:
 runs:
   using: 'composite'
   steps:
-    - name: Copy test files
-      uses: Bhacaz/checkout-files@v2
-      with:
-        files: packages/${{ inputs.package }}/loadtest
+    # - name: Copy test files
+    #   uses: Bhacaz/checkout-files@v2
+    #   with:
+    #     files: packages/${{ inputs.package }}/loadtest
 
     - name: Make reports directory
       shell: bash
